--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -221,7 +221,7 @@ h6 {
   margin-left: 5px;
 }
 
-.navbar>ul>li>a:before {
+.navbar > ul > li > a:before {
   content: "";
   position: absolute;
   width: 0;
@@ -235,7 +235,7 @@ h6 {
 }
 
 .navbar a:hover:before,
-.navbar li:hover>a:before,
+.navbar li:hover > a:before,
 .navbar .active:before {
   visibility: visible;
   width: 25px;
@@ -244,7 +244,7 @@ h6 {
 .navbar a:hover,
 .navbar .active,
 .navbar .active:focus,
-.navbar li:hover>a {
+.navbar li:hover > a {
   color: #222222;
 }
 
@@ -282,11 +282,11 @@ h6 {
 
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
-.navbar .dropdown ul li:hover>a {
+.navbar .dropdown ul li:hover > a {
   color: #34b7a7;
 }
 
-.navbar .dropdown:hover>ul {
+.navbar .dropdown:hover > ul {
   opacity: 1;
   top: 100%;
   visibility: visible;
@@ -298,7 +298,7 @@ h6 {
   visibility: hidden;
 }
 
-.navbar .dropdown .dropdown:hover>ul {
+.navbar .dropdown .dropdown:hover > ul {
   opacity: 1;
   top: 0;
   left: 100%;
@@ -310,7 +310,7 @@ h6 {
     left: -90%;
   }
 
-  .navbar .dropdown .dropdown:hover>ul {
+  .navbar .dropdown .dropdown:hover > ul {
     left: -100%;
   }
 }
@@ -382,7 +382,7 @@ h6 {
 
 .navbar-mobile a:hover,
 .navbar-mobile .active,
-.navbar-mobile li:hover>a {
+.navbar-mobile li:hover > a {
   color: #34b7a7;
 }
 
@@ -417,11 +417,11 @@ h6 {
 
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
-.navbar-mobile .dropdown ul li:hover>a {
+.navbar-mobile .dropdown ul li:hover > a {
   color: #34b7a7;
 }
 
-.navbar-mobile .dropdown>.dropdown-active {
+.navbar-mobile .dropdown > .dropdown-active {
   display: block;
 }
 
@@ -553,7 +553,8 @@ section {
 # Cta
 --------------------------------------------------------------*/
 .cta {
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url("../img/bg-1.jpg") fixed center center;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("../img/bg-1.jpg") fixed center center;
   background-size: cover;
   padding: 80px 0;
 }
@@ -636,13 +637,12 @@ section {
 /*--------------------------------------------------------------
 # Skills
 --------------------------------------------------------------*/
-section#skills {
+section.container {
   display: inline-block;
   position: relative;
+  text-align: center;
   margin: 0 auto;
 }
-
-
 
 /*--------------------------------------------------------------
 # Facts
@@ -803,6 +803,21 @@ section#skills {
   background: #fff;
   border: 2px solid #34b7a7;
 }
+.resume button[type="button"] {
+  background: #34b7a7;
+  border: 0;
+  padding: 10px 30px 12px 30px;
+  color: #fff;
+  transition: 0.4s;
+  border-radius: 50px;
+}
+
+.resume button[type="button"]:hover {
+  background: #3dc8b7;
+}
+.resume .button-container-div {
+  text-align: center;
+}
 
 /*--------------------------------------------------------------
 # Services
@@ -815,30 +830,38 @@ section#skills {
   font-size: 1.8vw;
 }
 
-.centriq .btn{
+.centriq .btn {
   background-color: #3a60f7;
 }
 
-.centriq .btn:hover{
+.centriq .btn:hover {
   background-color: #2345cb;
 }
 
 .centriq i {
   float: right;
   font-size: 1.5em;
-  margin: 0 .5vh;
+  margin: 0 0.5vh;
 }
 
-.centriq button{
+.centriq button {
   width: 40%;
+}
+.centriq .card {
+  
+  
+  overflow: hidden;
+  
+}
+.centriq .card img{
+  height: auto;
+  width: 100%;
 }
 
 @media (max-width: 800px) {
- 
-  .centriq h4{
+  .centriq h4 {
     font-size: 4vw;
   }
-
 }
 
 /*--------------------------------------------------------------
@@ -980,7 +1003,10 @@ section#skills {
   position: relative;
 }
 
-.portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet {
+.portfolio-details
+  .portfolio-details-slider
+  .swiper-pagination
+  .swiper-pagination-bullet {
   width: 12px;
   height: 12px;
   background-color: #fff;
@@ -988,7 +1014,10 @@ section#skills {
   border: 1px solid #34b7a7;
 }
 
-.portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
+.portfolio-details
+  .portfolio-details-slider
+  .swiper-pagination
+  .swiper-pagination-bullet-active {
   background-color: #34b7a7;
 }
 
@@ -1011,7 +1040,7 @@ section#skills {
   font-size: 15px;
 }
 
-.portfolio-details .portfolio-info ul li+li {
+.portfolio-details .portfolio-info ul li + li {
   margin-top: 10px;
 }
 
@@ -1145,7 +1174,7 @@ section#skills {
   padding: 10px 12px;
 }
 
-.contact .php-email-form button[type=submit] {
+.contact .php-email-form button[type="submit"] {
   background: #34b7a7;
   border: 0;
   padding: 10px 30px 12px 30px;
@@ -1154,7 +1183,7 @@ section#skills {
   border-radius: 50px;
 }
 
-.contact .php-email-form button[type=submit]:hover {
+.contact .php-email-form button[type="submit"]:hover {
   background: #3dc8b7;
 }
 
@@ -1185,13 +1214,13 @@ section#skills {
   background: #e9e8e6;
   padding: 30px 0;
   color: #222222;
-  font-size: 14px;
+  font-size: 12px;
   text-align: center;
 }
 
 #footer .credits {
   padding-top: 5px;
-  font-size: 13px;
+  font-size: 11px;
 }
 
 #footer .credits a {
