--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -554,7 +554,7 @@ section {
 --------------------------------------------------------------*/
 .cta {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
-    url("../img/bg-1.jpg") fixed center center;
+    url("/assets/img/bg-1.jpg") fixed center center;
   background-size: cover;
   padding: 80px 0;
 }
